--- a/HelloWorld/Dockerfile
+++ b/HelloWorld/Dockerfile
@@ -29,8 +29,7 @@ RUN git clone https://github.com/Azure/azure-sphere-samples.git && \
         -DCMAKE_BUILD_TYPE="Debug" \
         /AzSphere/azure-sphere-samples/Samples/HelloWorld/HelloWorld_HighLevelApp && \
     ninja && \
-    mkdir /app && \
     cp *.imagepackage /app
 
 WORKDIR /app
-RUN ls -la
+ENTRYPOINT []
